--- a/src/app-proa/profesor/crear-examen-nuevo.html
+++ b/src/app-proa/profesor/crear-examen-nuevo.html
@@ -8,20 +8,46 @@
   <title>Realizar Examen</title>
   <link rel="stylesheet" href="../css/estilos.css">
   <link rel="stylesheet" href="../css/submenu-asignatura.css">
+  <link rel="stylesheet" href="css/dropdown-grupo.css">
   <link rel="stylesheet" href="css/pop-up.css">
   <link rel="stylesheet" href="css/crear-examen-nuevo.css">
   <script src="../js/header-proa.js" defer></script>
   <script src="js/asignatura-profesor.js" defer></script>
   <script src="js/crear-examen-nuevo.js" defer></script>
   <script src="js/pop-up.js " defer></script>
+  <script src="js/dropdown-asignaturas.js" defer></script>
 </head>
 <body>
-<main class="contenido-wrapper">
 
-  <!-- Contenido dividido -->
-  <div class="contenido-principal">
-    <aside id="submenu" class="submenu"></aside>
+<main class="contenido-wrapper"> <!-- Contenedor principal del contenido -->
 
+  <div class="contenido-principal"> <!-- Contenedor que agrupa el submenú y el contenido principal -->
+    <aside id="submenu" class="submenu"></aside> <!-- Submenú lateral (se rellena dinámicamente) -->
+    <div class="contenido-asignatura"> <!-- Área principal donde se muestra el contenido relacionado con la asignatura -->
+      <div class="cabecera-dropdown-fija-profesor"> <!-- Barra superior con filtros desplegables para el profesor -->
+
+        <!-- Aquí se inyecta dinámicamente el botón del submenú en responsive -->
+
+        <div class="contenedor-dropdowns"> <!-- Contenedor agrupador de los dos dropdowns -->
+          <!-- Dropdown para seleccionar grupo (PL1, PL2...) -->
+          <div class="input-con-icono grupo-dropdown">
+            <select id="dropdown-grupo" class="input-base seleccionador-dropdown">
+              <option value="todos">Todos</option>
+              <option value="pl1">Grupo PL1</option>
+              <option value="pl2">Grupo PL2</option>
+            </select>
+            <img src="../icons/dropdownAsignaturasAzul.svg" alt="Flecha" class="icono-dropdown">
+          </div>
+
+          <!-- Dropdown para seleccionar asignatura (rellenado dinámicamente con JS) -->
+          <div class="input-con-icono asignatura-dropdown">
+            <select id="dropdown-asignaturas" class="input-base seleccionador-dropdown"></select>
+            <img src="../icons/dropdownAsignaturas.svg" alt="Flecha" class="icono-dropdown">
+          </div>
+        </div>
+      </div>
+
+      <!-- SECCIÓN CREAR EXÁMENES PROFESOR -->
     <section class="panel-asignaturas fondoPanel">
 
       <h2>Panel de creación de examen</h2>
@@ -122,15 +148,13 @@
               </div>
             </div>
           </div>
-
         </div>
-
       </form>
 
+    </section> <!-- FIN DE LA SECCIÓN CREAR EXÁMENES PROFESOR -->
 
-
-    </section>
-  </div>
+    </div>
+  </div> <!-- Fin del contenedor contenido-principal -->
 </main>
 
 </body>
