--- a/src/app-proa/profesor/examenes-profesor.html
+++ b/src/app-proa/profesor/examenes-profesor.html
@@ -7,8 +7,10 @@
   <title>Asignatura Profesor</title>
   <link rel="stylesheet" href="../css/estilos.css">
   <link rel="stylesheet" href="../css/submenu-asignatura.css">
+  <link rel="stylesheet" href="css/examenes-profesor.css">
   <script src="../js/header-proa.js" defer></script>
   <script src="js/asignatura-profesor.js" defer></script>
+  <script src="js/examenes-profesor.js"></script>
 </head>
 <body>
 <main class="contenido-wrapper">
@@ -19,7 +21,7 @@
     <aside id="submenu" class="submenu"></aside>
 
     <section class="panel-contenido fondoPanel">
-      <p>Selecciona una opción del submenú lateral para ver los contenidos de esta asignatura.</p>
+
     </section>
   </div>
 </main>
