--- a/src/app-gti/login.html
+++ b/src/app-gti/login.html
@@ -71,27 +71,29 @@
             </ul>
         </div>
         <div class="columna-footer-contenedor">
-            <div class="columna-footer">
-                <h4>Enlaces Rapidos</h4>
-                <ul>
-                    <li><a class="parrafo-terciario" href="catalogo.html">Catalogo</a></li>
-                    <li><a class="parrafo-terciario" href="preguntasFrecuentes.html">Prgunta Frequentes</a></li>
-                    <li><a class="parrafo-terciario" href="contacto.html">Contacto</a></li>
-                </ul>
+            <div class="columna-footer-info">
+                <div class="columna-footer">
+                    <h4>Enlaces Rapidos</h4>
+                    <ul>
+                        <li><a class="parrafo-terciario" href="catalogo.html">Catalogo</a></li>
+                        <li><a class="parrafo-terciario" href="preguntasFrecuentes.html">Prgunta Frequentes</a></li>
+                        <li><a class="parrafo-terciario" href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+                <div class="columna-footer">
+                    <h4>Contacto</h4>
+                    <ul>
+                        <li class="parrafo-terciario">Email: info@gti.edu</li>
+                        <li class="parrafo-terciario">Tel: +34 900 123 456</li>
+                    </ul>
+                </div>
             </div>
-            <div class="columna-footer">
-                <h4>Contacto</h4>
-                <ul>
-                    <li class="parrafo-terciario">Email: info@gti.edu</li>
-                    <li class="parrafo-terciario">Tel: +34 900 123 456</li>
-                </ul>
+            <div class="derechos parrafo-terciario">
+                © 2025 TuEmpresa. Todos los derechos reservados.
             </div>
         </div>
+    </div>
 
-    </div>
-    <div class="derechos parrafo-terciario">
-        © 2025 TuEmpresa. Todos los derechos reservados.
-    </div>
 </footer>
 <!-- Fin del footer-->
 
