chore: fix botones crear-examen-profesor

--- a/src/app-proa/profesor/crear-examen-nuevo.html
+++ b/src/app-proa/profesor/crear-examen-nuevo.html
@@ -69,7 +69,8 @@
                 <div>
                   <input type="text" class="input-base" id="valor-examen" required>
                 </div>
-
+              </label>
+              <label>
                 <span>Peso: *</span>
                 <div>
                   <input type="text" class="input-base" id="peso-examen" required>
