chore: gestionPAS responsive, lo siento trabajé en develop sin querer.

--- a/src/app-proa/pas/asignaturas.html
+++ b/src/app-proa/pas/asignaturas.html
@@ -39,11 +39,11 @@
                     <!-- Dropdown de departamentos -->
                     <div class="dropdown-wrapper">
                         <select class="input-base seleccionador-dropdown" id="dropdown-asignaturas">
-                            <option value="todos">Todas los departamentos</option>
+                            <option value="todos">Todos los departamentos</option>
                             <option value="matematica">Matemática Aplicada</option>
                             <option value="sistemas">Sistemas Informáticos</option>
                         </select>
-                        <img src="../icons/dropdownAsignaturas.svg" alt="Desplegable" class="icono-dropdown" />
+                        <img src="../icons/dropdown.svg" alt="Desplegable" class="icono-dropdown" />
                     </div>
 
                     <!-- Botón para crear nueva asignatura -->
