feat: full stack Gestión PAS

--- a/src/app-proa/pas/asignaturas.html
+++ b/src/app-proa/pas/asignaturas.html
@@ -63,43 +63,7 @@
                         <span>FICHA</span>
                         <span>ASIGNAR</span>
                     </div>
-
-                    <!-- Primera fila de datos -->
-                    <div class="fila">
-                        <span>MAT101</span>
-                        <span>Álgebra Matricial</span>
-                        <span>Matemática Aplicada</span>
-                        <span>6</span>
-                        <button class="btn">Ver detalles</button>
-
-                        <!-- Menú Asignar -->
-                        <div class="menu-opciones-wrapper">
-                            <img src="../icons/menu.svg" alt="Opciones" class="icono-opciones" onclick="toggleOpciones(this)" />
-                            <div class="menu-desplegable">
-                                <button>Asignar alumno</button>
-                                <button>Asignar profesor</button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Segunda fila de datos -->
-                    <div class="fila">
-                        <span>PRO110</span>
-                        <span>Programación 1</span>
-                        <span>Sistemas Informáticos</span>
-                        <span>6</span>
-                        <button class="btn">Ver detalles</button>
-
-                        <!-- Menú Asignar -->
-                        <div class="menu-opciones-wrapper">
-                            <img src="../icons/menu.svg" alt="Opciones" class="icono-opciones" onclick="toggleOpciones(this)" />
-                            <div class="menu-desplegable">
-                                <button>Asignar alumno</button>
-                                <button>Asignar profesor</button>
-                            </div>
-                        </div>
-                    </div>
-
+                    <!-- Se insertan dinámicamente las filas con JS -->
                 </div> <!-- Fin tabla-asignaturas -->
             </div> <!-- Fin gestion-asignaturas -->
         </section> <!-- Fin contenido-asignatura -->
