chore: algunas correcciones

--- a/src/index.html
+++ b/src/index.html
@@ -39,13 +39,13 @@
         <div class="texto-diferenciador">
             <h2>¿Quiénes somos?</h2>
             <p class="parrafo-secundario">
-                GTI es una empresa emergente especializada en el desarrollo de productos digitales para el sector educativo.
+                GTI es una empresa emergente especializada en el desarrollo de productos digitales para el sector educativo. Nuestro enfoque está en crear herramientas modernas, intuitivas y accesibles que respondan a las necesidades reales de las instituciones académicas.
             </p>
             <p class="parrafo-secundario">
                 Actualmente nos encontramos en fase de lanzamiento de nuestro primer producto, PROA, una interfaz de gestión diseñada para mejorar la organización y comunicación interna en entornos educativos.
             </p>
             <p class="parrafo-secundario">
-                Nuestro compromiso es ofrecer soluciones funcionales y efectivas, priorizando la experiencia de usuario y la simplicidad.
+                Nuestro compromiso es ofrecer soluciones funcionales y efectivas, priorizando la experiencia de usuario y la simplicidad en cada módulo que desarrollamos. GTI nace con la misión de transformar la gestión educativa a través de la tecnología.
             </p>
         </div>
         <div class="imagen-diferenciador">
