chore: crear nueva asignatura

--- a/src/app-proa/pas/asignaturas.html
+++ b/src/app-proa/pas/asignaturas.html
@@ -48,7 +48,7 @@
                     </div>
 
                     <!-- Botón para crear nueva asignatura -->
-                    <button class="btn">+ Nueva asignatura</button>
+                    <button class="btn" onclick="redireccionarPagina()">+ Nueva asignatura</button>
                 </div>
 
                 <!-- Tabla con la información de las asignaturas -->
