chore: ficha examen profesor full stack + boton atras en pgs profesor

--- a/src/app-proa/profesor/crear-examen-nuevo.html
+++ b/src/app-proa/profesor/crear-examen-nuevo.html
@@ -47,6 +47,8 @@
         </div>
       </div>
 
+      <button class="btn-oscuros-secundario btn-atras" onclick="volverAtras()">← Volver</button>
+
       <!-- SECCIÓN CREAR EXÁMENES PROFESOR -->
     <section class="panel-asignaturas fondoPanel">
 
