--- a/src/app-gti/catalogo.html
+++ b/src/app-gti/catalogo.html
@@ -88,40 +88,37 @@
     </section>
 </main>
 
-<!-- SECCIÓN FOOTER -->
+<!-- Footer-->
 <footer>
     <div class="contenido-footer">
+
+        <!-- Primera columna-->
+        <div class="columna-footer columna-logo">
+            <img src="img/gtiBlanco.svg" alt="logo">
+            <p class="parrafo-secundario">Liderando la innovación en tecnología educativa</p>
+        </div>
+
+        <!-- Segunda columna-->
         <div class="columna-footer">
+            <h4>Enlaces rápidos</h4>
             <ul>
-                <li><div><img src="img/gtiBlanco.svg" alt="logo"></div></li>
-                <li class="parrafo-terciario">Liderando la innovación en tecnología educativa</li>
+                <li><a class="parrafo-secundario" href="catalogo.html">Catálogo</a></li>
+                <li><a class="parrafo-secundario" href="preguntasFrecuentes.html">Preguntas Frecuentes</a></li>
+                <li><a class="parrafo-secundario" href="contacto.html">Contacto</a></li>
             </ul>
         </div>
-        <div class="columna-footer-contenedor">
-            <div class="columna-footer-info">
-                <div class="columna-footer">
-                    <h4>Enlaces Rapidos</h4>
-                    <ul>
-                        <li><a class="parrafo-terciario" href="catalogo.html">Catalogo</a></li>
-                        <li><a class="parrafo-terciario" href="preguntasFrecuentes.html">Prgunta Frequentes</a></li>
-                        <li><a class="parrafo-terciario" href="contacto.html">Contacto</a></li>
-                    </ul>
-                </div>
-                <div class="columna-footer">
-                    <h4>Contacto</h4>
-                    <ul>
-                        <li class="parrafo-terciario">Email: info@gti.edu</li>
-                        <li class="parrafo-terciario">Tel: +34 900 123 456</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="derechos parrafo-terciario">
-                © 2025 TuEmpresa. Todos los derechos reservados.
-            </div>
+
+        <!-- Tercera columna-->
+        <div class="columna-footer">
+            <h4>Contacto</h4>
+            <ul>
+                <li class="parrafo-secundario">Email: info@gti.edu</li>
+                <li class="parrafo-secundario">Tel: +34 900 123 456</li>
+            </ul>
         </div>
     </div>
-
 </footer>
+<!-- Fin del footer-->
 
 </body>
 </html>
