chore: se había líado un poco con los estilos

--- a/src/app-gti/preguntasFrecuentes.html
+++ b/src/app-gti/preguntasFrecuentes.html
@@ -102,16 +102,16 @@
         <!-- Primera columna-->
         <div class="columna-footer columna-logo">
             <img src="img/gtiBlanco.svg" alt="logo">
-            <p class="parrafo-secundario">Liderando la innovación en tecnología educativa</p>
+            <p class="elementos-footer">Liderando la innovación en tecnología educativa</p>
         </div>
 
         <!-- Segunda columna-->
         <div class="columna-footer">
             <h4>Enlaces rápidos</h4>
             <ul>
-                <li><a class="parrafo-secundario" href="catalogo.html">Catálogo</a></li>
-                <li><a class="parrafo-secundario" href="preguntasFrecuentes.html">Preguntas Frecuentes</a></li>
-                <li><a class="parrafo-secundario" href="contacto.html">Contacto</a></li>
+                <li><a class="elementos-footer" href="catalogo.html">Catálogo</a></li>
+                <li><a class="elementos-footer" href="preguntasFrecuentes.html">Preguntas Frecuentes</a></li>
+                <li><a class="elementos-footer" href="contacto.html">Contacto</a></li>
             </ul>
         </div>
 
@@ -119,8 +119,8 @@
         <div class="columna-footer">
             <h4>Contacto</h4>
             <ul>
-                <li class="parrafo-secundario">Email: info@gti.edu</li>
-                <li class="parrafo-secundario">Tel: +34 900 123 456</li>
+                <li class="elementos-footer">Email: info@gti.edu</li>
+                <li class="elementos-footer">Tel: +34 900 123 456</li>
             </ul>
         </div>
     </div>
