chore: faltaba div

--- a/src/app-proa/pas/ficha-asignatura-pas.html
+++ b/src/app-proa/pas/ficha-asignatura-pas.html
@@ -64,8 +64,9 @@
                                 </div>
                                 <ul id="resultados-profesor"></ul>
                             </div>
-
                             <ul id="lista-profesores"></ul>
+
+                        </div>
                     </div>
                 </div>
             </section>
