chore: correccion ficha asignatura, asignacion profesor + alumno full stack

--- a/src/app-proa/pas/ficha-asignatura-pas.html
+++ b/src/app-proa/pas/ficha-asignatura-pas.html
@@ -18,21 +18,26 @@
         <aside id="submenu" class="submenu"></aside>
 
         <div class="container">
-            <div class="volver-wrapper">
-                <button id="btn-volver" class="btn-secundario">← Volver</button>
-            </div>
+            <a href="#" id="btn-volver" class="volver-enlace">← Volver</a>
+
 
             <section class="contenido-asignatura fondoPanel">
 
                 <h2 id="nombre-asignatura">Nombre asignatura</h2>
 
                 <div class="bloque-datos-asignatura">
-                    <p><strong>Código:</strong> <span id="codigo-asignatura"></span></p>
-                    <p><strong>Departamento:</strong> <span id="departamento-asignatura"></span></p>
-                    <p><strong>Curso:</strong> <span id="curso-asignatura"></span></p>
-                    <p><strong>Semestre:</strong> <span id="semestre-asignatura"></span></p>
-                    <p><strong>Año:</strong> <span id="anyo-asignatura"></span></p>
-                    <p><strong>Créditos:</strong> <span id="creditos-asignatura"></span> cts</p>
+                    <div class="datos">
+                        <h4>Datos de la asignatura:</h4>
+                    </div>
+                    <div class="informacion">
+                        <p><strong>Código:</strong> <span id="codigo-asignatura"></span></p>
+                        <p><strong>Departamento:</strong> <span id="departamento-asignatura"></span></p>
+                        <p><strong>Curso:</strong> <span id="curso-asignatura"></span></p>
+                        <p><strong>Semestre:</strong> <span id="semestre-asignatura"></span></p>
+                        <p><strong>Año:</strong> <span id="anyo-asignatura"></span></p>
+                        <p><strong>Créditos:</strong> <span id="creditos-asignatura"></span> cts</p>
+                    </div>
+
                 </div>
 
                 <div class="bloque-listas-asignacion">
