chore: imágenes en png

--- a/src/app-gti/pagProducto.html
+++ b/src/app-gti/pagProducto.html
@@ -80,7 +80,7 @@
             </p>
         </div>
         <div class="imagen-diferenciador">
-            <img src="img/pcFondoPROA.svg" alt="Vista de PROA en PC">
+            <img src="img/pcFondoPROA.png" alt="Vista de PROA en PC">
         </div>
     </div>
 </section>
