--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
             </p>
         </div>
         <div class="imagen-diferenciador">
-            <img src="app-gti/img/imagenBrainGTI.svg" alt="Personas trabajando en una mesa">
+            <img src="app-gti/img/imagenBrainGTI.png" alt="Personas trabajando en una mesa">
         </div>
     </div>
 </section>
