chore: ficha asignatura redirige a asignar alumnos y profesor

--- a/src/app-proa/css/estilosPROA.html
+++ b/src/app-proa/css/estilosPROA.html
@@ -33,6 +33,7 @@
             <div class="icono-item"><img src="../icons/advertencia.svg" alt="advertencia"><span>advertencia</span></div>
             <div class="icono-item"><img src="../icons/advertenciaFecha.svg" alt="advertenciaFecha"><span>advertenciaFecha</span></div>
             <div class="icono-item"><img src="../icons/anyadir.svg" alt="anyadir"><span>anyadir</span></div>
+            <div class="icono-item"><img src="../icons/anyadir-redondo.svg" alt="anyadir"><span>anyadir</span></div>
             <div class="icono-item"><img src="../icons/examenes.svg" alt="examenes"><span>examenes</span></div>
             <div class="icono-item"><img src="../icons/fecha.svg" alt="fecha"><span>fecha</span></div>
             <div class="icono-item"><img src="../icons/flechaScroll.svg" alt="flechaScroll"><span>flechaScroll</span></div>
