chore: arreglo de asignar profesor

--- a/src/app-proa/pas/asignacion-profesor-pas.html
+++ b/src/app-proa/pas/asignacion-profesor-pas.html
@@ -20,7 +20,7 @@
             <a href="#" id="btn-volver" class="volver-enlace">← Volver</a>
 
             <section class="contenido-asignatura fondoPanel">
-                <h2>Asignación Profesores Álgebra Matricial</h2>
+                <h2 id="titulo-asignacion">Asignación Profesores</h2>
 
                 <div class="bloque-listas-asignacion">
                     <div class="columna">
