--- a/src/app-proa/pas/asignacion-alumnos-pas.html
+++ b/src/app-proa/pas/asignacion-alumnos-pas.html
@@ -20,7 +20,7 @@
             <a href="#" id="btn-volver" class="volver-enlace">← Volver</a>
 
             <section class="contenido-asignatura fondoPanel">
-                <h2>Asignación Alumnos <span id="nombre-asignatura"></span></h2>
+                <h2 id="titulo-asignacion">Asignación Alumnos</h2>
 
                 <div class="bloque-listas-asignacion">
                     <div class="columna">
