--- a/src/app-proa/pas/asignacion-alumnos-pas.html
+++ b/src/app-proa/pas/asignacion-alumnos-pas.html
@@ -24,24 +24,15 @@
 
                 <div class="bloque-listas-asignacion">
                     <div class="columna">
-                        <div class="titulo-columna">
-                            <h3>Alumnos asignados</h3>
-                            <div class="buscador">
-                                <div class="input-con-icono">
-                                    <input type="text" class="input-base" id="input-buscar-alumno" placeholder="Buscar alumnos...">
-                                    <img src="../icons/search.svg" class="icono-buscador" alt="Buscar">
-                                </div>
-                            </div>
-                            <ul id="lista-alumnos-disponibles"></ul>
-                        </div>
+                        <h3>Alumnos disponibles</h3>
+                        <input type="text" id="input-buscar-disponibles" class="input-base" placeholder="Buscar alumno...">
+                        <ul id="lista-disponibles"></ul>
+                        <p id="mensaje-sin-resultados" class="mensaje-auxiliar" style="display: none;">No se encontraron alumnos con ese nombre.</p>
                     </div>
-
                     <div class="columna">
-                        <div class="titulo-columna">
-                            <h3>Nuevos alumnos a asignar</h3>
-                            <ul id="lista-alumnos-nuevos"></ul>
-                            <button id="btn-confirmar" class="btn">Confirmar asignación</button>
-                        </div>
+                        <h3>Alumnos asignados</h3>
+                        <ul id="lista-asignados"></ul>
+                        <button id="btn-confirmar" class="btn">Confirmar cambios</button>
                     </div>
                 </div>
             </section>
