chore: dialog al salir, redireccion al confirmar

--- a/src/app-proa/pas/asignacion-profesor-pas.html
+++ b/src/app-proa/pas/asignacion-profesor-pas.html
@@ -50,5 +50,12 @@
     </div>
 </main>
 <div id="notificacion" class="notificacion" style="display:none;"></div>
+<dialog id="dialog-cambios" class="dialog-confirmacion">
+    <p>Tienes cambios sin guardar. ¿Deseas salir sin guardar?</p>
+    <div class="dialog-acciones">
+        <button id="cancelar-dialogo" class="btn-oscuros-secundario">Cancelar</button>
+        <button id="confirmar-salida" class="btn-oscuros">Salir sin guardar</button>
+    </div>
+</dialog>
 </body>
 </html>
