chore: filtros y buscador en gestión asignaturas PAS

--- a/src/app-proa/pas/asignaturas.html
+++ b/src/app-proa/pas/asignaturas.html
@@ -40,9 +40,7 @@
                     <!-- Dropdown de departamentos -->
                     <div class="dropdown-wrapper">
                         <select class="input-base seleccionador-dropdown" id="dropdown-asignaturas">
-                            <option value="todos">Todos los departamentos</option>
-                            <option value="matematica">Matemática Aplicada</option>
-                            <option value="sistemas">Sistemas Informáticos</option>
+                            <!-- Se generan las opciones del dropdown con JS, dependiendo del JSON -->
                         </select>
                         <img src="../icons/dropdown.svg" alt="Desplegable" class="icono-dropdown" />
                     </div>
