chore: desplegable submenu

--- a/src/app-proa/pas/index.html
+++ b/src/app-proa/pas/index.html
@@ -12,8 +12,7 @@
     <script src="js/panel-pas.js" defer></script>
 
 </head>
-<body>
-
+<body class="vista-pas">
 <div class="contenido-wrapper">
     <div class="contenido-principal">
 
