--- a/src/app-proa/pas/asignacion-alumnos-pas.html
+++ b/src/app-proa/pas/asignacion-alumnos-pas.html
@@ -11,7 +11,7 @@
     <script src="js/panel-pas.js" defer></script>
     <script src="js/asignar-alumnos.js" defer></script>
 </head>
-<body>
+<body class="vista-pas">
 <main class="contenido-wrapper">
     <div class="contenido-principal">
         <aside id="submenu" class="submenu"></aside>
