--- a/src/app-proa/pas/ficha-asignatura-pas.html
+++ b/src/app-proa/pas/ficha-asignatura-pas.html
@@ -12,7 +12,7 @@
     <script src="js/panel-pas.js" defer></script>
     <script src="js/ficha-asignatura-pas.js" defer></script>
 </head>
-<body>
+<body class="vista-pas">
 <main class="contenido-wrapper">
     <div class="contenido-principal">
         <aside id="submenu" class="submenu"></aside>
