chore: adpatado para pantallas grandes y más

--- a/src/index.html
+++ b/src/index.html
@@ -31,10 +31,15 @@
         </p>
         <a id="cta" class="btnCTA" href="#">Conoce nuestra solución</a>
     </div>
+
+    <!-- Flecha scroll -->
+    <a href="#quienes-somos" class="scroll-flecha" aria-label="Ir a la siguiente sección">
+        <img src="app-gti/icons/flecha-abajoPROA.svg" alt="Desplazar hacia abajo">
+    </a>
 </section>
 
 <!-- SECCIÓN DIFERENCIADORA -->
-<section class="seccion-diferenciadora">
+<section class="seccion-diferenciadora" id="quienes-somos">
     <div class="contenedor-diferenciador">
         <div class="texto-diferenciador">
             <h2>¿Quiénes somos?</h2>
