--- a/src/app-proa/profesor/crear-examen-nuevo.html
+++ b/src/app-proa/profesor/crear-examen-nuevo.html
@@ -78,7 +78,7 @@
               <label>
                 <span>Peso: *</span>
                 <div class="peso">
-                  <input type="number" class="input-base" id="peso-examen" required>
+                  <input type="number" class="input-base" id="peso-examen" max="40" required>
                   <span>%</span>
                 </div>
               </label>
@@ -121,7 +121,6 @@
 
               <textarea name="pregunta1" id="pregunta1" cols="30" rows="3" class="input-base input-pregunta"
                         placeholder="Escribe la pregunta aquí..." required></textarea>
-
             </div>
 
             <div class="respuestas-contenedor">
