--- a/src/app-gti/catalogo.html
+++ b/src/app-gti/catalogo.html
@@ -36,7 +36,7 @@
         <div class="modulo-contenido">
             <!-- Logo -->
             <div class="logo-proa-container">
-                <img src="/src/app-proa/icons/logoAzul.svg" alt="Logo PROA" class="logo-proa">
+                <img src="img/logoAzul.svg" alt="Logo PROA" class="logo-proa">
             </div>
 
             <!-- DESCRIPCIÓN DE MÓDULO -->
