--- a/src/app-proa/profesor/entregas-examen-profesor.html
+++ b/src/app-proa/profesor/entregas-examen-profesor.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
 
-            <button class="btn-oscuros-secundario btn-atras" onclick="volverAtras()">← Volver</button>
+            <a href="#" id="btn-volver" class="volver-enlace">← Volver</a>
 
             <section class="panel-contenido fondoPanel">
             <section class="titulo">
