chore: botón volver

--- a/src/app-proa/profesor/crear-examen-nuevo.html
+++ b/src/app-proa/profesor/crear-examen-nuevo.html
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-      <button class="btn-oscuros-secundario btn-atras" id="volver" onclick="activarPopPup(this)">← Volver</button>
+      <a href="#" id="volver" class="volver-enlace" onclick="activarPopPup(this)">← Volver</a>
 
       <!-- SECCIÓN CREAR EXÁMENES PROFESOR -->
     <section class="panel-asignaturas fondoPanel">
