--- a/src/app-proa/profesor/ficha-examen-profesor.html
+++ b/src/app-proa/profesor/ficha-examen-profesor.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
 
-            <button class="btn-oscuros-secundario btn-atras" onclick="volverAtras()">← Volver</button>
+            <a href="#" id="volver" class="volver-enlace" onclick="volverAtras()">← Volver</a>
 
 
             <section class="panel-contenido fondoPanel">
