chore: botón volver

--- a/src/app-proa/alumno/realizar-examen.html
+++ b/src/app-proa/alumno/realizar-examen.html
@@ -40,6 +40,8 @@
         </div>
       </div>
 
+      <a href="#" id="volver" class="volver-enlace">← Volver</a>
+
     <section class="panel-contenido fondoPanel">
 
       <form id="formulario-examen">
