chore: lógica popup dentro de hacer examen alumno

--- a/src/app-proa/alumno/realizar-examen.html
+++ b/src/app-proa/alumno/realizar-examen.html
@@ -246,6 +246,17 @@
           </div>
         </div>
 
+        <!-- Pop-up de confirmación para cancelar o volver -->
+        <div id="popup-volver-cancelar" class="popup">
+          <div class="contenido-popup">
+            <p class="parrafo-principal">¿Estás seguro de que deseas salir? Se perderán los cambios no guardados.</p>
+            <div class="btn-popup">
+              <button id="popup-volver-cancelar-no" class="btn-oscuros-secundario" type="button">Cancelar</button>
+              <button id="popup-volver-cancelar-si" class="btn-oscuros">Aceptar</button>
+            </div>
+          </div>
+        </div>
+
       </form>
     </section>
   </div>
