chore: página realizar exámen alumno corregida

--- a/src/app-proa/alumno/realizar-examen.html
+++ b/src/app-proa/alumno/realizar-examen.html
@@ -42,7 +42,7 @@
 
       <a href="#" id="volver" class="volver-enlace">← Volver</a>
 
-    <section class="panel-contenido fondoPanel">
+    <section class="panel-contenido fondoPanel" id="panelRealizarExamen">
 
       <form id="formulario-examen">
         <section class="titulo">
