--- a/src/app-proa/profesor/crear-examen-nuevo.html
+++ b/src/app-proa/profesor/crear-examen-nuevo.html
@@ -124,7 +124,7 @@
             </div>
 
             <div class="respuestas-contenedor">
-              <span>Selecciona la respuesta correcta</span>
+              <span id="recordatorio">NOTA: Recuerda seleccionar la respuesta correcta</span>
               <div class="respuesta-opcion">
                 <div class="radio-grupo">
                   <input type="radio" id="pregunta1-a" name="pregunta1" required>
